script_exporter/_kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: demo
  name: prom-custom-script
spec:
  replicas: 1
  template:
    metadata:
      labels:
        cluster: prom-custom-script
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: prom-custom-script
        #image: ecr.demo.com/demo/devops/prometheus-custom-script:v01
        image: python:3.6
        imagePullPolicy: Always
        command:
          - "/bin/sh"
          - "-c"
          - >
            apt-get install wget;
            pip install prometheus_client;
            wget http://demo.com/projects/DP/repos/demo/raw/demo_monitoring/test.py -O /tmp/test.py;
            chmod +x /tmp/test.py;
            python3 /tmp/test.py
        securityContext:
          privileged: true
        ports:
         - name: web
           containerPort: 9172
        volumeMounts:
        - name: demo-volume
          mountPath: /mnt/demo
          subPath: demo
        - name: prom-exporter-configmap-volume
          mountPath: /etc/script-exporter/script-exporter.yml
          subPath: script-exporter.yml
      volumes:
      - name: demo-volume
        persistentVolumeClaim:
          claimName: demo-nfs-pvc
      - name: prom-exporter-configmap-volume
        configmap:
          name: prom-exporter-configmap
